--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
     defaultConfig {
         applicationId "com.example.android.sunshine.app"
         minSdkVersion 13
@@ -24,7 +24,9 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    debugWearApp project(path: ':sunshinewatchface', configuration: 'debug')
+    releaseWearApp project(path: ':sunshinewatchface', configuration: 'release')
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-annotations:23.1.1'
     compile 'com.android.support:gridlayout-v7:23.1.1'
@@ -37,6 +39,4 @@ dependencies {
     compile 'com.google.android.support:wearable:1.3.0'
     compile 'com.google.android.gms:play-services-wearable:8.4.0'
     compile 'com.android.support:support-v13:23.1.1'
-    wearApp project(':sunshinewatchface')
-
 }
