--- a/sunshinewatchface/build.gradle
+++ b/sunshinewatchface/build.gradle
@@ -2,11 +2,12 @@ apply plugin: 'com.android.application'
 
 
 android {
+
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-
+    publishNonDefault true
     defaultConfig {
-        applicationId "app.com.example.android.sunshinewatchface"
+        applicationId "com.example.android.sunshine.app"
         minSdkVersion 21
         targetSdkVersion 23
         versionCode 1
@@ -18,10 +19,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.android.support:wearable:1.3.0'
     compile 'com.google.android.gms:play-services-wearable:8.4.0'
 }
