--- a/sunshine-watchface/build.gradle
+++ b/sunshine-watchface/build.gradle
@@ -2,10 +2,9 @@ apply plugin: 'com.android.application'
 
 
 android {
-
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
-    publishNonDefault true
+
     defaultConfig {
         applicationId "com.example.android.sunshine.app"
         minSdkVersion 21
@@ -19,12 +18,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    productFlavors {
-    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.support:wearable:1.3.0'
     compile 'com.google.android.gms:play-services-wearable:8.4.0'
 }
