--- a/sunshine-watchface/src/main/AndroidManifest.xml
+++ b/sunshine-watchface/src/main/AndroidManifest.xml
@@ -39,6 +39,14 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <service
+            android:name=".MyWeatherListenService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
